# blockchain-demo

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.js  calculated_h.json  extractedCode.txt  package-lock.json  package.json
locales/: en.json  zh-CN.json
public/javascripts/: blockchain.js
public/javascripts/lib/: ladda.min.js
public/stylesheets/lib/: bootstrap-horizon.css  ladda-themeless.min.css
src/: chameleonhash.backup  chameleonhash.cpp
views/: block.pug  blockchain.pug  index.pug  layout.pug
views/includes/: block.pug
